--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,13 @@ markdown==3.1.*
 uvicorn==0.11.*
 
 autoflake
+asgi-lifespan==1.*
 black
 flake8
+httpx==0.12.*
 isort
 mypy
 pytest
 pytest-asyncio
 pytest-cov
 seed-isort-config
-trio
