--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 -e .
 
+jinja2==2.*
+markdown==3.1.*
+uvicorn==0.11.*
+
 autoflake
 black
 flake8
+httpx==0.12.*
 isort
 mypy
 pytest
 pytest-asyncio
 pytest-cov
 seed-isort-config
-trio
