--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ combine_as_imports = True
 force_grid_wrap = 0
 include_trailing_comma = True
 known_first_party = arel,tests
-known_third_party = setuptools
+known_third_party = broadcaster,setuptools,starlette,watchgod
 line_length = 88
 multi_line_output = 3
 
