Upload coverage via codecov bash script

--- a/ci/azure-pipelines.yml
+++ b/ci/azure-pipelines.yml
@@ -30,12 +30,6 @@ jobs:
           pythonVersion: $(pythonVersion)
       - script: scripts/test
         displayName: "Run tests"
-      - script: |
-          if [ -f .coverage ]; then
-            python -m pip install codecov;
-            codecov --required;
-          fi
+      - script: curl -s https://codecov.io/bash | bash
         condition: eq(variables['uploadCoverage'], true)
-        env:
-          CODECOV_TOKEN: $(codecovToken)
         displayName: "Upload coverage"
