--- a/ci/azure-pipelines.yml
+++ b/ci/azure-pipelines.yml
@@ -4,6 +4,7 @@ resources:
       type: github
       endpoint: github
       name: florimondmanca/azure-pipelines-templates
+      ref: refs/heads/master
 
 trigger:
   - master
@@ -16,28 +17,11 @@ variables:
   PIP_CACHE_DIR: $(Pipeline.Workspace)/.cache/pip
 
 jobs:
-  - job: Check
-    steps:
-      - template: python-install.yml@templates
-        parameters:
-          pythonVersion: "3.8"
+  - template: job--python-check.yml@templates
+    parameters:
+      pythonVersion: "3.8"
 
-  - job: Test
-    strategy:
-      matrix:
-        Python37:
-          pythonVersion: "3.7"
-        Python38:
-          pythonVersion: "3.8"
-          uploadCoverage: true
-
-    steps:
-      - template: python-install.yml@templates
-        parameters:
-          pythonVersion: $(pythonVersion)
-      - script: scripts/test
-        displayName: "Run tests"
-      - script: |
-          bash <(curl -s https://codecov.io/bash) -Z -C $(Build.SourceVersion)
-        condition: eq(variables['uploadCoverage'], true)
-        displayName: "Upload coverage"
+  - template: job--python-test.yml@templates
+    parameters:
+      envs: ["py37", "py38"]
+      uploadCoverageOn: "py38"
