--- a/ci/azure-pipelines.yml
+++ b/ci/azure-pipelines.yml
@@ -4,26 +4,39 @@ resources:
       type: github
       endpoint: github
       name: florimondmanca/azure-pipelines-templates
-      ref: refs/tags/3.0
+      ref: refs/tags/3.2
 
 trigger:
   - master
+  - refs/tags/*
 
 pr:
   - master
 
 variables:
-  CI: true
-  PIP_CACHE_DIR: $(Pipeline.Workspace)/.cache/pip
+  - name: CI
+    value: "true"
+  - name: PIP_CACHE_DIR
+    value: $(Pipeline.Workspace)/.cache/pip
+  - group: pypi-credentials
 
-jobs:
-  - template: job--python-check.yml@templates
-    parameters:
-      pythonVersion: "3.8"
+stages:
+  - stage: test
+    jobs:
+      - template: job--python-check.yml@templates
+        parameters:
+          pythonVersion: "3.8"
 
-  - template: job--python-test.yml@templates
-    parameters:
-      jobs:
-        py37: null
-        py38:
-          coverage: true
+      - template: job--python-test.yml@templates
+        parameters:
+          jobs:
+            py37: null
+            py38:
+              coverage: true
+
+  - stage: publish
+    condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
+    jobs:
+      - template: job--python-publish.yml@templates
+        parameters:
+          token: $(pypiToken)
